--- a/package.json
+++ b/package.json
@@ -6,16 +6,35 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "json-server --host 0.0.0.0 db.json --port 9090"
   },
   "dependencies": {
-    "expo": "~51.0.14",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.7.2",
+    "expo": "~51.0.16",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "json-server": "^1.0.0-beta.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.7",
+    "babel-preset-expo": "^11.0.11"
   },
   "private": true
 }
